--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "cloudinary": "^1.41.0",
+    "cloudinary-core": "^2.13.0",
     "fireworks-js": "^2.10.7",
     "next": "14.0.1",
+    "next-cloudinary": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
