--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pg": "npx prisma generate"
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "axios": "^1.6.0",
+    "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "cloudinary": "^1.41.0",
     "cloudinary-core": "^2.13.0",
+    "cors": "^2.8.5",
     "fireworks-js": "^2.10.7",
     "next": "14.0.1",
     "next-cloudinary": "^5.7.0",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@types/cors": "^2.8.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -35,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
