--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
     "prisma": "^5.6.0",
+    "sweetalert2": "^11.10.1",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
