--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "cloudinary": "^1.41.0",
     "cloudinary-core": "^2.13.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "fireworks-js": "^2.10.7",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "moment": "^2.29.4",
+    "moment-with-locales-es6": "^1.0.1",
     "next": "14.0.1",
     "next-cloudinary": "^5.7.0",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
@@ -32,12 +38,15 @@
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "@types/cors": "^2.8.16",
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "html2pdf.js": "^0.10.1",
     "postcss": "^8.4.31",
     "prisma": "^5.6.0",
     "sweetalert2": "^11.10.1",
