--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dnyvmibvg"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="651577513784934"
 NEXT_PUBLIC_CLOUDINARY_API_SECRET="thxKZk20j77VwTsDlqBdn2TLCYQ"
 
+JWT_SECRET="abunaum!@#"
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
