--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "bootstrap-icons": "^1.11.1",
     "cloudinary": "^1.41.0",
     "cloudinary-core": "^2.13.0",
+    "cookies-next": "^4.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "fireworks-js": "^2.10.7",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "moment": "^2.29.4",
@@ -39,6 +41,7 @@
     "@iconify/react": "^4.1.1",
     "@types/cors": "^2.8.16",
     "@types/crypto-js": "^4.2.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
