--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookies-next": "^4.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
     "fireworks-js": "^2.10.7",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
@@ -34,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "swr": "^2.2.4",
     "zustand": "^4.4.6"
   },
