--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "fireworks-js": "^2.10.7",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
@@ -31,6 +32,7 @@
     "moment-with-locales-es6": "^1.0.1",
     "next": "14.0.1",
     "next-cloudinary": "^5.7.0",
+    "puppeteer": "^21.6.1",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
