--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ NEXT_PUBLIC_CLOUDINARY_API_SECRET="thxKZk20j77VwTsDlqBdn2TLCYQ"
 
 JWT_SECRET="abunaum!@#"
 
+APP_URL="http://localhost:3000"
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
