--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-simple-typewriter": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "swr": "^2.2.4",
