--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.49.2",
     "react-simple-typewriter": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.4",
     "zustand": "^4.4.6"
   },
