--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
+    "mazaha": "^1.0.8",
     "moment": "^2.29.4",
     "moment-with-locales-es6": "^1.0.1",
     "next": "14.0.1",
@@ -41,6 +42,7 @@
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.4",
+    "telegraf": "^4.15.3",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
