--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.1",
     "cloudinary": "^1.41.0",
     "cloudinary-core": "^2.13.0",
     "cookies-next": "^4.1.0",
@@ -40,6 +41,7 @@
     "next-cloudinary": "^5.7.0",
     "qrcode": "^1.5.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-simple-typewriter": "^5.0.1",
