--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
+    "faker": "^6.6.6",
     "fireworks-js": "^2.10.7",
     "formidable": "^3.5.1",
     "html2canvas": "^1.4.1",
@@ -55,6 +56,7 @@
     "@iconify/react": "^4.1.1",
     "@types/cors": "^2.8.16",
     "@types/crypto-js": "^4.2.1",
+    "@types/faker": "^6.6.9",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
